WIP finished dockerfiles + entrypoints, untested

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # BASIC CONFIG
-CKAN_VERSION=2.9.3
+CKAN_VERSION=2.9
+PYTHON_VERSION=3.9
 MAINTAINER=sam.woodcock@protonmail.com
 INTERNAL_REG=reg.dev.localhost
 EXTERNAL_REG=docker.io
 
 # INJECTED SECRETS
-CKAN_CONFIG_FILE=
+CKAN_CONFIG_FILE=ckan.ini
 CKAN_DB_SECRET_FILE=
-CKAN_DB_DUMP_FILE=
-DOI_DB_DUMP_FILE=
+CKAN_DB_DUMP_FILE=ckan.dump
+DOI_DB_DUMP_FILE=doi.dump
