--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -1,7 +1,8 @@
-FROM postgis/postgis:12-3.2
+ARG EXTERNAL_REG
+FROM ${EXTERNAL_REG}/postgis/postgis:12-3.1
 
 ARG MAINTAINER
-LABEL MAINTAINER ${MAINTAINER}
+LABEL maintainer="${MAINTAINER}" 
 
 # Allow connections; we don't map out any ports so only linked docker containers can connect
 RUN echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf
