add docker lint exception, pip install non -e

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
     hooks:
       - id: hadolint-docker
         entry: hadolint/hadolint:v2.8.0 hadolint
-        args: ["--ignore=DL3008"]
+        args: ["--ignore=DL3008", "--ignore=DL3013"]
 
   # Lint: YAML
   - repo: https://github.com/adrienverge/yamllint.git
