--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -11,16 +11,8 @@ ENV SOLR_CORE ckan
 RUN mkdir -p /opt/solr/server/solr/$SOLR_CORE/conf \
     && mkdir -p /opt/solr/server/solr/$SOLR_CORE/data
 
-# Adding Files
-COPY ./solrconfig.xml \
-    ./schema.xml \
-    /opt/solr/server/solr/$SOLR_CORE/conf/
-ADD https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/currency.xml \
-    https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/synonyms.txt \
-    https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/stopwords.txt \
-    https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/basic_configs/conf/protwords.txt \
-    https://raw.githubusercontent.com/apache/lucene-solr/releases/lucene-solr/6.6.5/solr/server/solr/configsets/data_driven_schema_configs/conf/elevate.xml \
-    /opt/solr/server/solr/$SOLR_CORE/conf/
+# Add Config Files
+COPY . /opt/solr/server/solr/$SOLR_CORE/conf/
 
 # Create Core.properties
 RUN echo name=$SOLR_CORE > /opt/solr/server/solr/$SOLR_CORE/core.properties
