update compose, readme, .env template

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ EXTERNAL_REG=docker.io
 
 # INJECTED SECRETS
 CKAN_CONFIG_FILE=ckan.ini
-CKAN_DB_SECRET_FILE=
-CKAN_DB_DUMP_FILE=ckan.dump
-DOI_DB_DUMP_FILE=doi.dump
+CKAN_DB_INIT_PASS_FILE=.postgres.secret
+CKAN_DB_SECRET_FILE=.db.secret
+CKAN_SOLR_CREDS_FILE=.solr.secret
