--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 CKAN_VERSION=2.9
 PYTHON_VERSION=3.9
 MAINTAINER=sam.woodcock@protonmail.com
-INTERNAL_REG=reg.dev.localhost
+INTERNAL_REG=registry.envidat.ch
 EXTERNAL_REG=docker.io
 
 # INJECTED SECRETS
