--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -1,5 +1,8 @@
 ARG EXTERNAL_REG
-FROM ${EXTERNAL_REG}/postgis/postgis:14-3.2
+ARG POSTGRES_VERSION
+ARG POSTGIS_VERSION
+
+FROM ${EXTERNAL_REG}/postgis/postgis:{POSTGRES_VERSION}-${POSTGIS_VERSION}
 
 ARG MAINTAINER
 LABEL maintainer="${MAINTAINER}" 
