--- a/solr/Dockerfile
+++ b/solr/Dockerfile
@@ -1,5 +1,7 @@
 ARG EXTERNAL_REG
-FROM ${EXTERNAL_REG}/solr:6.6.5
+ARG SOLR_VERSION
+
+FROM ${EXTERNAL_REG}/solr:${SOLR_VERSION}
 
 ARG MAINTAINER
 LABEL maintainer="${MAINTAINER}" 
