add SOLR_HOST to vars, fix postgres docker

--- a/postgresql/Dockerfile
+++ b/postgresql/Dockerfile
@@ -2,7 +2,7 @@ ARG EXTERNAL_REG
 ARG POSTGRES_VERSION
 ARG POSTGIS_VERSION
 
-FROM ${EXTERNAL_REG}/postgis/postgis:{POSTGRES_VERSION}-${POSTGIS_VERSION}
+FROM ${EXTERNAL_REG}/postgis/postgis:${POSTGRES_VERSION}-${POSTGIS_VERSION}
 
 ARG MAINTAINER
 LABEL maintainer="${MAINTAINER}" 
