set image pull policy for init-solr to always... update README

--- a/chart/templates/job.yaml
+++ b/chart/templates/job.yaml
@@ -11,7 +11,7 @@ spec:
       containers:
       - name: solr-init-passwords
         image: "{{ .Values.image.repository }}-init-solr:{{ .Values.solr.image.tag }}"
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         envFrom:
         - secretRef:
             name: {{ .Values.solr.passwordInit.credentialsSecret }}
