--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
         - PYTHON_VERSION=${PYTHON_VERSION}
         - CKAN_VERSION=${CKAN_VERSION}
         - MAINTAINER=${MAINTAINER}
+    extra_hosts:
+      notes.wsl.ch: 10.30.1.65
     depends_on:
       - db
       - solr
@@ -45,6 +47,7 @@ services:
         - POSTGIS_VERSION=${POSTGIS_VERSION}
         - MAINTAINER=${MAINTAINER}
     environment:
+      - POSTGRES_PASSWORD=ai4ncF6GpHokPaNmW25UftzMjM7hrC
       - PGDATA=/var/lib/postgresql/data/db
     env_file:
       - .db.env
@@ -55,6 +58,8 @@ services:
       - ckan-internal
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
+    ports:
+      - "25432:5432"
 
   solr:
     container_name: ckan_solr
@@ -78,8 +83,10 @@ services:
       args:
         - EXTERNAL_REG=${EXTERNAL_REG}
         - MAINTAINER=${MAINTAINER}
-    env_file:
-      - .solr.env
+    environment:
+      SOLR_HOST: http://solr:8983
+      SOLR_ADMIN_PASS: 4hAYTQkUD6REA3futeKsvUjvK9wETG
+      SOLR_CKAN_PASS: MPnJRcGVGurpJF3kWq2eFNDEr3cXv6
     networks:
       - ckan-internal
     depends_on:
