configurable pullpolicy for init solr, set secrets - disable liveness probes on ckan

--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -28,23 +28,35 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ .Chart.Name }}-ckan
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 5000
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          #   failureThreshold: 1
+          #   periodSeconds: 20
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          #   failureThreshold: 5
+          #   successThreshold: 1
+          #   initialDelaySeconds: 60
+          #   periodSeconds: 20
+          # startupProbe:
+          #   httpGet:
+          #     path: /
+          #     port: http
+          #   failureThreshold: 30
+          #   periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
