--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -27,6 +27,8 @@ spec:
       serviceAccountName: {{ include "chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      hostAliases:
+        {{- toYaml .Values.hostAliases | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}-ckan
           securityContext:
