--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -45,6 +45,11 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+hostAliases:
+  - ip: 10.30.1.65
+    hostnames:
+      - "notes.wsl.ch"
+
 service:
   type: ClusterIP
   port: 5000
