--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ckan_storage:/var/lib/ckan
+      - ckan_storage:/opt/ckan/data
       - ./ckan.ini:/home/ckan/ckan.ini
     networks:
       - ckan-internal
