--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -33,10 +33,14 @@ spec:
         - name: copy-ckan-group-img
           image: docker.io/rclone/rclone
           imagePullPolicy: IfNotPresent
+          securityContext:
+            runAsUser: 33
           volumeMounts:
-            - name: rclone-config
-              mountPath: /config/rclone/rclone.conf
-              subPath: rclone.conf
+          - name: rclone-config
+            mountPath: /config/rclone/rclone.conf
+            subPath: rclone.conf
+          - name: ckan-group-imgs
+            mountPath: {{ .Values.s3GroupImgs.mountPath }}
           command:
             - sh
             - -c
@@ -82,13 +86,17 @@ spec:
             mountPath: /home/ckan/ckan.ini
             subPath: ckan.ini
             readOnly: true
+          - name: ckan-group-imgs
+            mountPath: {{ .Values.s3GroupImgs.mountPath }}
       volumes:
       - name: ckan-config
         secret:
           secretName: {{ .Values.configIniSecret }}
       - name: rclone-config
         secret:
-          secretName: minio-rclone-config     
+          secretName: minio-rclone-config  
+      - name: ckan-group-imgs
+        emptyDir: {}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
