--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -55,26 +55,34 @@ spec:
             - name: http
               containerPort: 5000
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          #   failureThreshold: 1
-          #   periodSeconds: 20
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          #   failureThreshold: 5
-          #   successThreshold: 1
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 20
-          # startupProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          #   failureThreshold: 30
-          #   periodSeconds: 10
+          {{- if .Values.probes.livenessProbe.enabled }}
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+            failureThreshold: 1
+            periodSeconds: 20
+            initialDelaySeconds: 120
+          {{- end }}
+          {{- if .Values.probes.readinessProbe.enabled }}
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            failureThreshold: 5
+            successThreshold: 1
+            initialDelaySeconds: 60
+            periodSeconds: 20
+          {{- end }}
+          {{- if .Values.probes.startupProbe.enabled }}
+          startupProbe:
+            httpGet:
+              path: /
+              port: http
+            failureThreshold: 30
+            periodSeconds: 10
+            initialDelaySeconds: 60
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
