--- a/chart/templates/job.yaml
+++ b/chart/templates/job.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
+  ttlSecondsAfterFinished: 100
   template:
     spec:
       containers:
