helm solr init job allow to fail (e.g. repeating)

--- a/chart/templates/job.yaml
+++ b/chart/templates/job.yaml
@@ -16,5 +16,6 @@ spec:
         envFrom:
         - secretRef:
             name: {{ .Values.solr.passwordInit.credentialsSecret }}
-      restartPolicy: OnFailure
+      restartPolicy: Never
+      activeDeadlineSeconds: 180
     {{- end }}
