--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -61,30 +61,32 @@ spec:
           {{- if .Values.probes.livenessProbe.enabled }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /dataset/
               port: http
             failureThreshold: 1
-            periodSeconds: 20
+            periodSeconds: 120
             initialDelaySeconds: 120
+            timeoutSeconds: 10
           {{- end }}
           {{- if .Values.probes.readinessProbe.enabled }}
           readinessProbe:
             httpGet:
-              path: /
+              path: /api/3/action/status_show
               port: http
             failureThreshold: 5
-            successThreshold: 1
             initialDelaySeconds: 60
             periodSeconds: 20
+            timeoutSeconds:  10
           {{- end }}
           {{- if .Values.probes.startupProbe.enabled }}
           startupProbe:
             httpGet:
-              path: /
+              path: /api/3/action/status_show
               port: http
             failureThreshold: 30
             periodSeconds: 10
             initialDelaySeconds: 60
+            timeoutSeconds: 10
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
